crates/macros/tests/ui/http_client/fail/generic_method_bean.stderr
error: #[http_client(bean)] requires an object-safe trait, but method `create` is generic; remove the generic parameters or drop `bean`
  --> tests/ui/http_client/fail/generic_method_bean.rs:10:5
   |
10 |     async fn create<T: Serialize>(&self, #[body] body: T) -> Result<(), ClientError>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `serde::Serialize`
 --> tests/ui/http_client/fail/generic_method_bean.rs:5:5
  |
5 | use serde::Serialize;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
